@@ -36,6 +36,7 @@
 #include "dpxutil.h"
 
 #include "tfm.h"
+#include "dvi.h"
 
 #define TFM_FORMAT 1
 #define OFM_FORMAT 2
@@ -242,6 +243,7 @@ lookup_range (const struct range_map *map, int charcode)
 
 #define FONT_DIR_HORIZ 0
 #define FONT_DIR_VERT  1
+#define FONT_DIR_RT    5
 
 struct font_metric
 {
@@ -631,7 +633,16 @@ ofm_get_sizes (FILE *ofm_file, off_t ofm_file_size, struct tfm_font *tfm)
   tfm->nfonparm = get_positive_quad(ofm_file, "OFM", "nfonparm");
   tfm->fontdir  = get_positive_quad(ofm_file, "OFM", "fontdir");
   if (tfm->fontdir) {
-    WARN("I may be interpreting a font direction incorrectly.");
+#ifndef WITHOUT_ASCII_PTEX
+    if (dvi_ptex_with_vert && tfm->fontdir==FONT_DIR_RT && tfm->level==1 && tfm->ec>=0x2E00) {
+      /* interpret FONTDIR RT as pTeX vertical writing */
+      if (dpx_conf.verbose_level > 0)
+        WARN("I will interpret a font direction as pTeX vertical writing.");
+    } else
+#endif /* !WITHOUT_ASCII_PTEX */
+    {
+      WARN("I may be interpreting a font direction incorrectly.");
+    }
   }
   if (tfm->level == 0) {
     ofm_check_size_one(tfm, ofm_file_size);
